--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -8,15 +8,8 @@
     <title>Heroic Features - Start Bootstrap Template</title>
     <!-- Bootstrap icons-->
     <link th:href="@{/css/universityView.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link th:href="@{/css/style.css}" rel="stylesheet">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.5/xlsx.full.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: white;">
 <!-- Responsive navbar-->
@@ -37,48 +30,57 @@
         </div>
     </div>
 </nav>
+<div id="app">
+    <table>
+        <caption></caption>
+        <thead>
+        <tr>
+            <th>기준년도 </th>
+            <th>학교명</th>
+            <th>전형유형명</th>
+            <th>전형대분류</th>
+            <th>전형중분류</th>
+            <th>전형소분류</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-<section class="ftco-section" style="width: fit-content;
-    margin: auto;
-    padding-top: 10px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <!-- page count -->
-                <div id="page_info"></div>
-                <!-- board -->
-                <div class="table-wrap">
-                    <table class="table">
-                        <thead class="thead-dark">
-                        <tr>
-                            <th>기준년도</th>
-                            <th>학교명</th>
-                            <th>전형유형명</th>
-                            <th>전형대분류</th>
-                            <th>전형중분류</th>
-                            <th>전형소분류</th>
-                        </tr>
-                        </thead>
-                        <tbody id="html_list">
-                        </tbody>
-                    </table>
-                    <!-- pagination -->
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center" id="paging">
-                        </ul>
-                    </nav>
-                </div>
+    <div class="paging">
+        <select id="countPerPage">
+            <option value="10">10</option>
+            <option value="30">30</option>
+            <option value="50">50</option>
+        </select>
+        <div style="display: flex; align-items: center;">
+            <!-- Fontawesome Icon -->
+            <i class="fa-solid fa-angles-left" id="first_page"></i>
+            <i class="fa-solid fa-angle-left" id="prev_page"></i>
+            <!--  -->
+            <div class="pages">
+                <span class="active">1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+                <span>5</span>
             </div>
+            <!-- Fontawesome Icon -->
+            <i class="fa-solid fa-angle-right" id="next_page"></i>
+            <i class="fa-solid fa-angles-right" id="last_page"></i>
+        </div>
+        <div>
+            Total: <span class="total">0</span>
         </div>
     </div>
-</section>
+</div>
+
 <!-- Footer-->
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script th:src="@{/js/jquery.blockUI.js}"></script>
 <script th:src="@{/js/pagination.js}"></script>
 </body>
 </html>
