--- a/jysInfo/src/main/resources/static/css/universityView.css
+++ b/jysInfo/src/main/resources/static/css/universityView.css
@@ -8312,7 +8312,7 @@ textarea.form-control-lg {
   background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
 }
 
-.bg-dark {
+.bg-dark1 {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
 }
