--- a/jysInfo/src/main/resources/templates/UniversityInfo.html
+++ b/jysInfo/src/main/resources/templates/UniversityInfo.html
@@ -7,10 +7,10 @@
     <meta name="author" content="" />
     <title>Heroic Features - Start Bootstrap Template</title>
     <!-- Bootstrap icons-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link th:href="@{/css/universityView.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link th:href="@{/css/universityView.css}" rel="stylesheet">
 </head>
 <body style="background-color: white;">
 <!-- Responsive navbar-->
