--- a/UnivercityView/css/univerityView.css
+++ b/UnivercityView/css/univerityView.css
@@ -112,6 +112,26 @@ body {
   background: #f5f5f5;
   font-family: 'Roboto', sans-serif;
 }
+
+.chart-area {
+  display: flex; 
+}
+.chart-area > div {
+  width: 50%;
+}
+.chart-info {
+  padding:0 0 0 45px;
+}
+
+@media screen and (max-width: 1024.98px) {
+  .chart-area {
+    display: block;
+  }
+  .chart-area > div {
+    width: auto;
+  }
+}
+
 .table-responsive {
   margin: 30px 0;
 }
