--- a/jysInfo/src/main/resources/templates/university/Detail.html
+++ b/jysInfo/src/main/resources/templates/university/Detail.html
@@ -3,8 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
+    <link href="css/univerityView.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <!-- Chart -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" th:src="@{/js/Detail.js?ver=<%=System.currentTimeMillis()%>}"></script>
+    <style> 
+      .chart-area {
+        display: flex;
+      }
+      .chart-area > div {
+        width: 50%;
+      }
+      .chart-info {
+        padding:0 0 0 45px;
+      }
 
+      @media screen and (max-width: 1024.98px) {
+        .chart-area {
+          display: block;
+        }
+        .chart-area > div {
+          width: auto;
+        }
+      }
+    </style>
+</head>
+<body style="overflow-x: hidden">
+<!-- Responsive navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark1">
+    <div class="container px-lg-5">
+        <a class="navbar-brand" href="#!">LOGO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars ms-1"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="">진로상담</a></li>
+                <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="majorInfo">학과정보</a></li>
+                <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="universityInfo">대학정보</a></li>
+                <li class="nav-item"><a class="nav-link" style="text-decoration: none;" href="companyInfo">기업정보</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<section>
+
+    <div class="row py-5">
+        <div class="col-lg-10 mx-auto">
+            <div class="card rounded shadow border-0">
+                <h2 style="font-weight: bold; margin: auto; padding-top: 20px;">
+                    한양대학교
+                </h2>
+                <br>
+                <p style="margin: auto">
+                    기준년도 : 2022 전형유형명 : OOO 전형대분류 : OOO 전형중분류 : OOO 전형소분류 : OOO
+                </p>
+                <div class="card-body p-5 bg-white rounded">
+                    <div class="table-responsive">
+                        <table id="example" style="width:100%" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>수시모집인원수(명)</th>
+                                <th>수시등록인원수(명)</th>
+                                <th>수시등록률(%)</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>61</td>
+                                <td>2011/04/25</td>
+                                <td>$320,800</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="table-responsive">
+                        <table id="example" style="width:100%" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>정시모집인원수(명)</th>
+                                <th>정시등록인원수(명)</th>
+                                <th>정시등록률(%)</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>61</td>
+                                <td>2011/04/25</td>
+                                <td>$320,800</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="table-responsive">
+                        <table id="example" style="width:100%" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>추가모집인원수(명)</th>
+                                <th>추가등록인원수(명)</th>
+                                <th>추가등록률(%)</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>61</td>
+                                <td>2011/04/25</td>
+                                <td>$320,800</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="table-responsive">
+                        <table id="example" style="width:100%" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>최종모집인원수(명)</th>
+                                <th>최종등록인원수(명)</th>
+                                <th>최종등록률(%)</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>61</td>
+                                <td>2011/04/25</td>
+                                <td>$320,800</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="chart-area">
+                        <div class="chart" style="margin: auto;">
+                            <div id="columnchart_material" style="width: 100%; height: 300px;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+
+<!-- Footer-->
+<footer class="py-5 bg-dark1">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+</footer>
 </body>
 </html>
